--- a/05-ODE-IVP/ODESystems-PhasePlane.ipynb
+++ b/05-ODE-IVP/ODESystems-PhasePlane.ipynb
@@ -184,23 +184,32 @@
      "end_time": "2021-10-30T01:10:52.457217Z",
      "start_time": "2021-10-30T01:10:52.190420Z"
     },
-    "deletable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "94904fae9fdf9ee7b1fa3f9766327aae",
-     "grade": false,
-     "grade_id": "cell-1c5f5b1da4dcee06",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from scipy.integrate import solve_ivp\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "sns.set_context(\"talk\")\n",
+    "\n",
+    "def fderiv(t, y):\n",
+    "    return y*t**3  - 1.5*y\n",
+    "\n",
+    "def solve_system(T0, TF, Y0, DT):\n",
+    "    # solve using scipy\n",
+    "    sol = solve_ivp(fderiv, t_span=[T0, TF], y0=[Y0], t_eval=np.arange(T0, TF+DT, DT))\n",
+    "\n",
+    "    # Plot \n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(sol.t, sol.y[0], '-*', label=f\"Scipy ivp, {DT=}\")\n",
+    "    # activate legend\n",
+    "    ax.legend()\n",
+    "\n",
+    "solve_system(T0=0.0, TF=2.0, Y0=1.0, DT=0.02)"
    ]
   },
   {
