Added updates from BVP linear

--- a/06-ODE-BVP/BVP-linear-matrices.ipynb
+++ b/06-ODE-BVP/BVP-linear-matrices.ipynb
@@ -23,18 +23,113 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81333c45-16b1-44e2-92dc-ded76161f332",
+   "id": "41486587-f867-4aa6-bcb0-6b965180eff8",
    "metadata": {},
    "source": [
     "# Boundary value problems: linear case and matrices\n",
     "When the BVP is linear, you can solve it either using the interpolation already shown, or by formulating the problem as a matrix system. The later is based on a [finite difference](https://en.wikipedia.org/wiki/Finite_difference_method) discretization for the derivatives. Let's start with the following problem, representing the temperature $T$ across a linear bar (Chapra, 27.1)\n",
+    "\n",
     "\\begin{equation}\n",
-    "\\frac{d^2T}{dx^2} + h'(T_a - T) = 0,  \n",
+    "  \\frac{d^2T}{dx^2} + h'(T_a - T) = 0,  \n",
     "\\end{equation}\n",
-    "where $h'$ is the transfer coefficient (m$^{-2}$), and $T_a$ is the sourronding air temperature. The boundary conditions are $T(0) = T_1 = 40$, $T(L=10) = t_2 = 200$, and $T_a = 20$. Also, $h' = 0.01$. \n",
     "\n",
-    "First, please solve the problem both theoretically and then using `solve_bvp` or yout own method.\n",
+    "where $h'$ is the transfer coefficient (m$^{-2}$), and $T_a$ is the sourronding air temperature. The boundary conditions are $T(0) = T_1 = 40$, $T(L=10) = T_2 = 200$, and $T_a = 20$. Also, $h' = 0.01$. \n",
     "\n",
+    "First, please solve the problem both theoretically and then using `solve_bvp` or yout own method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18bf2cc8-8c5b-4c69-ae20-02d9091a4775",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "cebc843da0f8781c7766a329c37153c0",
+     "grade": false,
+     "grade_id": "cell-bd34226eda6194f9",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.integrate import solve_bvp\n",
+    "sns.set()\n",
+    "sns.set_context(\"talk\")\n",
+    "\n",
+    "def deriv(t, y, params):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "def bc(ya, yb, params):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "def solve_bvp_plot(x0, xf, params):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "PARAMS = (0.01, 20.0)\n",
+    "solve_bvp_plot(0.0, 10.0, PARAMS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "097f5beb-c51f-4d3b-b1e0-c22d2b98a076",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "04fd83dcd13a6770552beddce1534d61",
+     "grade": false,
+     "grade_id": "cell-36a30d17f79162f6",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import root\n",
+    "from scipy.integrate import solve_ivp\n",
+    "sns.set()\n",
+    "sns.set_context(\"talk\")\n",
+    "\n",
+    "def deriv(t, y, params):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "def h(v0, y0, yf, t0, tf, dt, params):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "def solve_bvp_root(y0, yf, v0, t0, tf, dt, params):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n",
+    "PARAMS = (0.01, 20)\n",
+    "solve_bvp_root(40.0, 200.0, 10.9, 0.0, 10.0, 0.01, PARAMS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f280be36-51ee-4c3c-b7de-81e1aab73daa",
+   "metadata": {},
+   "source": [
     "Now let's proceed with a different way: by discretizing the derivatives and setting the equation on the points. We have,\n",
     "\n",
     "\\begin{equation}\n",
@@ -81,7 +176,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "d866f5e9f04d7ad6ae7698e1cb0b1563",
+     "checksum": "c03439d491f8ac43fc70c046c9ce7d52",
      "grade": false,
      "grade_id": "cell-652b20869a04a39f",
      "locked": false,
@@ -111,7 +206,7 @@
     "\n",
     "HPRIME = 0.01\n",
     "L = 10\n",
-    "N = 30\n",
+    "N = 300\n",
     "DX = L/(N+2-1) # +2 by adding the boundaries -1 by number of intervals\n",
     "TA = 20\n",
     "T1 = 40\n",
@@ -132,7 +227,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()\n",
-    "sns.set_context('poster')\n",
+    "sns.set_context('paper')\n",
     "x = DX*np.arange(N+2)\n",
     "plt.plot(x, T, '-o')\n"
    ]
