--- a/06-ODE-BVP/BVP.ipynb
+++ b/06-ODE-BVP/BVP.ipynb
@@ -115,7 +115,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "ae99cc0940ae284b9da3d96162ecdb0d",
+     "checksum": "a92585116b8b020a1d9b60c42a888cb7",
      "grade": false,
      "grade_id": "cell-a447cf326ba2d583",
      "locked": false,
@@ -131,6 +131,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.optimize import root\n",
+    "from scipy.integrate import solve_ivp\n",
+    "\n",
     "sns.set()\n",
     "sns.set_context(\"poster\")\n",
     "\n",
@@ -256,9 +258,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c02cbe1-c1be-44e4-a923-a00ac73a4df8",
+   "metadata": {},
+   "source": [
+    "# Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2052b0ac-0359-4e6b-8d2d-a843e3cc34cd",
+   "metadata": {},
+   "source": [
+    "## Ecuación de Schroedinger\n",
+    "Una partícula se encuentra confinada en un potencial infinito descrito por \n",
+    "\n",
+    "\\begin{equation}\n",
+    "  V(x) = \n",
+    "  \\begin{cases}\n",
+    "  0, -L/2 \\le x \\le L/2,\\\\\n",
+    "  \\infty, \\textrm{elsewhere}\n",
+    "  \\end{cases}\n",
+    "\\end{equation}\n",
+    "\n",
+    "La ecuación de onda $\\phi$ de la partícula (independiente del tiempo) es\n",
+    "\\begin{equation}\n",
+    "  \\frac{-\\hbar^2}{2m} \\frac{d^2\\phi(x)}{dx^2} + V(x) \\phi(x) = E\\phi(x).\n",
+    "\\end{equation}\n",
+    "Debido al potencial, la función de onda debe cumplir que $\\phi(-L/2) = \\phi(L/2) = 0$. \n",
+    "- Normalice la ecuación de manera que quede expresada en términos de una energía adimensional, posición adimensional, etc (medir la posición en unidades de $L$, etc)\n",
+    "- Resuelva el sistema usando BVP. El valor de $E$ determina los niveles de energía. Busque la solución teórica y piense cómo dar un valor inicial para obteneer cada uno de los niveles de energía.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f2d97af-7228-4d30-8e00-61dc47f03e98",
+   "id": "15c591a2-93d7-4060-b30f-1d8375038af8",
    "metadata": {},
    "outputs": [],
    "source": []
