Updated and fixed bvp material

--- a/06-ODE-BVP/BVP.ipynb
+++ b/06-ODE-BVP/BVP.ipynb
@@ -168,7 +168,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "7da2b7f744f96eaf90ede252e970f418",
+     "checksum": "19d00096f8f0f85a31fbd4bc36935410",
      "grade": false,
      "grade_id": "cell-5f4c2102039b0d45",
      "locked": false,
@@ -199,7 +199,7 @@
     "    raise NotImplementedError()\n",
     "\n",
     "PARAMS = (1.5e-6, 5e-6, 0.0)\n",
-    "solve_bvp_root(0.1, 0.0, -0.23, 0.0, 4.0, 0.1, PARAMS)\n",
+    "solve_bvp_root(0.1, 0.0, -0.33, 0.0, 4.0, 0.1, PARAMS)\n",
     "PARAMS = (1.5e-6, 5e-6, 4.8920)\n",
     "solve_bvp_root(0.1, 0.0, +0.33, 0.0, 4.0, 0.1, PARAMS)"
    ]
@@ -210,18 +210,18 @@
    "metadata": {},
    "source": [
     "# Using `scipy`: `solve_bvp`\n",
-    "The `scipy` module offers an useful function, https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.solve_bvp.html , to solve the problems we have been exploring. Check the manual and adapt the method"
+    "The `scipy` module offers an useful function, https://docs.scipy.org/doc/scipy/reference/generated/scipy.integrate.solve_bvp.html , to solve the problems we have been exploring. Check the manual and adapt the method Be careful: parameters are now treated as something that can vary, like the initial velocity or the energy in a quantum system, so our previous parameter use should be updated. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87232439-ccbd-49b5-8669-4269e2613838",
+   "id": "996dfae9-78f0-41fc-b68e-d2da982a5f49",
    "metadata": {
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "d3a8ff525ca6bc98c61391c7c1ee1eb7",
+     "checksum": "8bbc060276bcfdd058589b99b92d3bbb",
      "grade": false,
      "grade_id": "cell-f803eab1f5566632",
      "locked": false,
@@ -233,28 +233,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.integrate import solve_bvp\n",
-    "from scipy.optimize import root\n",
-    "sns.set()\n",
-    "sns.set_context(\"talk\")\n",
-    "\n",
-    "def deriv(t, y, params):\n",
-    "    return [y[1], params[1]*y[0]/params[0] - params[2]*y[1]]\n",
-    "\n",
-    "def bc(ya, yb, params):\n",
-    "    return [ya[0]-0.1, yb[0], *params]\n",
-    "\n",
-    "def solve_bvp_plot(x0, xf, y0, yf, params):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "\n",
-    "PARAMS = (1.5e-6, 5e-6, 0.0)\n",
-    "solve_bvp_plot(0.0, 4.0, 0.1, 0.0, PARAMS)\n",
-    "PARAMS = (1.5e-6, 5e-6, 320.8920)\n",
-    "solve_bvp_plot(0.0, 4.0, 0.1, 0.0, PARAMS)"
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -270,13 +250,13 @@
    "id": "2052b0ac-0359-4e6b-8d2d-a843e3cc34cd",
    "metadata": {},
    "source": [
-    "## Ecuación de Schroedinger\n",
+    "## Ecuación de Schroedinger (workshop)\n",
     "Una partícula se encuentra confinada en un potencial infinito descrito por \n",
     "\n",
     "\\begin{equation}\n",
     "  V(x) = \n",
     "  \\begin{cases}\n",
-    "  0, -L/2 \\le x \\le L/2,\\\\\n",
+    "  0, 0 \\le x \\le L,\\\\\n",
     "  \\infty, \\textrm{elsewhere}\n",
     "  \\end{cases}\n",
     "\\end{equation}\n",
@@ -285,16 +265,128 @@
     "\\begin{equation}\n",
     "  \\frac{-\\hbar^2}{2m} \\frac{d^2\\phi(x)}{dx^2} + V(x) \\phi(x) = E\\phi(x).\n",
     "\\end{equation}\n",
-    "Debido al potencial, la función de onda debe cumplir que $\\phi(-L/2) = \\phi(L/2) = 0$. \n",
+    "Debido al potencial, la función de onda debe cumplir que $\\phi(0) = \\phi(L) = 0$. \n",
     "- Normalice la ecuación de manera que quede expresada en términos de una energía adimensional, posición adimensional, etc (medir la posición en unidades de $L$, etc)\n",
     "- Resuelva el sistema usando BVP. El valor de $E$ determina los niveles de energía. Busque la solución teórica y piense cómo dar un valor inicial para obteneer cada uno de los niveles de energía.\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3ab99e4-5511-428a-bb7b-7ae55b808379",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "markdown",
+     "checksum": "4339906976674cc4ed295e849da1f373",
+     "grade": true,
+     "grade_id": "cell-9be6f173e7fa50db",
+     "locked": false,
+     "points": 0,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "source": [
+    "YOUR ANSWER HERE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c591a2-93d7-4060-b30f-1d8375038af8",
+   "id": "1ef5f685-62d8-4420-b4af-d5d4c3468d64",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "0b0f3cfe2de347b76e8e80e72cddeff0",
+     "grade": false,
+     "grade_id": "cell-cc957611bd729b36",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "sns.set()\n",
+    "sns.set_context(\"talk\")\n",
+    "import numpy as np\n",
+    "from scipy.integrate import solve_bvp, trapezoid\n",
+    "\n",
+    "def deriv(t, y, params):\n",
+    "    V = 0\n",
+    "    return np.vstack((y[1], -(params[0]-V)*y[0]))\n",
+    "\n",
+    "def bc(ya, yb, params):\n",
+    "    return [ya[0] - 0.0, yb[0] - 0.0, ya[1] - 1.0]\n",
+    "\n",
+    "def solve_bvpE(x, y0, params):\n",
+    "    # YOUR CODE HERE\n",
+    "    raise NotImplementedError()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a60b9c1-8927-46b9-8e3a-6e968793045f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PARAMS = np.array([1.7])\n",
+    "x = np.linspace(0, 1, 100)\n",
+    "y0 = np.ones((2, x.size))\n",
+    "sol = solve_bvpE(x, y0, PARAMS)\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(sol.x, sol.y[0])\n",
+    "print(sol.p)\n",
+    "#print(sol.y[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81736f93-89ed-42a7-9074-fbd68e994858",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PARAMS = np.array([39.47])\n",
+    "PARAMS = np.array([39.4])\n",
+    "x = np.linspace(0, 1, 100)\n",
+    "y0 = np.ones((2, x.size))\n",
+    "y0[0, int(-3*x.size/4)] = -1\n",
+    "sol = solve_bvpE(x, y0, PARAMS)\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(sol.x, sol.y[0])\n",
+    "print(sol.p)\n",
+    "#print(sol.y[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8da03cc6-3446-4798-a24b-c0d544a6e69e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PARAMS = np.array([80.7])\n",
+    "sol = solve_bvpE(0.0, 1.0, 100, 0.0, 0.0, PARAMS)\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(sol.x, sol.y[0])\n",
+    "print(sol.p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67556b87-9119-40c7-89cb-cde508ff1458",
    "metadata": {},
    "outputs": [],
    "source": []
