--- a/07-vpython/vpython-leapfrog.ipynb
+++ b/07-vpython/vpython-leapfrog.ipynb
@@ -45,7 +45,8 @@
     "- Vpython installed. For anaconda, you can install vpython (to be used inside the notebook) by executing the following in the terminal\n",
     "        pip install vpython\n",
     "        conda install ipython jupyter notebook numpy matplotlib\n",
-    "- Open a jupyter-notebook to play with these codes."
+    "- Open a jupyter-notebook to play with these codes.\n",
+    "- Using glowscript: https://glowscript.org/  (importing numpy does not work there)"
    ]
   },
   {
@@ -121,7 +122,7 @@
    "outputs": [],
    "source": [
     "import vpython as vp\n",
-    "vp.scene.autoscale = False\n",
+    "vp.scene.autoscale = False # Does not work on glowscript\n",
     "scene = vp.canvas(title='3D scene')\n",
     "ball = vp.sphere(pos=vp.vector(-5,0,0), radius=0.5, color=vp.color.cyan) \n",
     "wallR = vp.box(pos=vp.vector(+6,0,0), size=vp.vector(0.2,12,12), color=vp.color.green) \n",
@@ -133,8 +134,10 @@
     "t=0\n",
     "while t < 3:\n",
     "    vp.rate(100)\n",
+    "    # interaction\n",
     "    if ball.pos.x > wallR.pos.x or ball.pos.x < wallL.pos.x:\n",
     "        ball.velocity.x = -ball.velocity.x\n",
+    "    # movement\n",
     "    ball.pos = ball.pos + ball.velocity*deltat\n",
     "    varr.pos = ball.pos; varr.axis=vscale*ball.velocity\n",
     "    t = t + deltat\n"
@@ -289,6 +292,95 @@
     "* Compute the difference percentage between the theoretical and the numerical result. How does it decrease with $\\delta t$? Make a plot of the percentage of cumulated error, $\\Delta E = \\sum_{i} |theo_i - num_i|/|theo_i|$ ($i$ denotes the time step) as function of $\\delta t$. What should be the value of $\\delta t$ to get an error less or equal than 1 %?\n",
     "* Add a line to make the particle bounce on the floor. Check.\n",
     "* Plot the velocity as function of time. Is the value as expected? compare with the theory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65d724de-bcc1-4ac3-a440-cda1fa60ce9b",
+   "metadata": {},
+   "source": [
+    "## Particle inside magnetic field\n",
+    "In this case, the force is equal to \n",
+    "\n",
+    "$$\\vec F = q \\vec V\\times \\vec B ,$$\n",
+    "where $\\vec B$ is the magnetic field. In this case we just need to set the value for $\\vec B$ and the force routine. What we expect is that the particle will follow a circular path."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bb1d44-3e8b-43c5-91fa-b75a6d1db72f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "#from __future__ import division, print_function\n",
+    "import numpy as np\n",
+    "#import matplotlib.pyplot as plt\n",
+    "import vpython as vp\n",
+    "\n",
+    "# constants\n",
+    "B = (0, 0, 3.0)\n",
+    "MASS = 1.23 # Kg\n",
+    "Q = 1.2 \n",
+    "R0 = np.array([2.0, 2.0, 0.0]) # m\n",
+    "V0 = np.array([0.0, 9.265, 0.0]) # m/s\n",
+    "DT = 0.001\n",
+    "T = np.arange(0.0, 8.5, DT)\n",
+    "NSTEPS = T.size\n",
+    "\n",
+    "# start leapfrog\n",
+    "def start_integration(V, F, mass, dt):\n",
+    "    return V - 0.5*dt*dt*F/mass\n",
+    "\n",
+    "# evolve through leapfrog\n",
+    "def integration(R, V, F, mass, dt):\n",
+    "    Vnew = V + dt*F/mass\n",
+    "    Rnew = R + dt*Vnew\n",
+    "    return Rnew, Vnew\n",
+    "\n",
+    "# compute net force\n",
+    "def force(R, V, mass):\n",
+    "    return Q*np.cross(V, B)\n",
+    "\n",
+    "# visualization stuff\n",
+    "scene = vp.canvas(title='3D scene', center = vp.vector(4, 2, 2))\n",
+    "scene.autoscale = False\n",
+    "ball = vp.sphere(pos=vp.vector(R0[0], R0[1], R0[2]), radius=0.4, color=vp.color.cyan) \n",
+    "ball.velocity = vp.vector(0,0,0)\n",
+    "vscale = 0.2\n",
+    "varr = vp.arrow(pos=ball.pos, axis=vscale*ball.velocity, color=vp.color.yellow)\n",
+    "ball.trail = vp.curve(color=ball.color)\n",
+    "\n",
+    "# initial conditions\n",
+    "Y = np.zeros(NSTEPS); VY = np.zeros(NSTEPS) # To save only Y coordinates, as function of time\n",
+    "Y[0] = R0[1]; VY[0] = V0[1]\n",
+    "R = R0; V = V0 ; F = force(R, V, MASS) # Value which changes at each time step\n",
+    "V = start_integration(V, F, MASS, DT) # Move Velocity from 0 to -dt/2\n",
+    "\n",
+    "# main evolution loop\n",
+    "it = 1\n",
+    "while it < NSTEPS:\n",
+    "    F = force(R, V, MASS)\n",
+    "    R, V = integration(R, V, F, MASS, DT)\n",
+    "    Y[it] = R[1]; VY[it] = V[1]\n",
+    "    # visual stuff\n",
+    "    vp.rate(400)\n",
+    "    ball.pos = vp.vector(R[0], R[1], R[2]); ball.velocity = vp.vector(V[0], V[1], V[2]); \n",
+    "    varr.pos = ball.pos; varr.axis=vscale*ball.velocity\n",
+    "    ball.trail.append(pos=ball.pos)\n",
+    "    # advance time\n",
+    "    it = it + 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c52f877-0bdf-416e-8b86-3fbd1f119755",
+   "metadata": {},
+   "source": [
+    "### Homework\n",
+    "* Compute the radius of the trajectory. Compare with the theoretical value.\n",
+    "* After 5 cycles, is the radius still constant? plot the radius after 5 cycles as function of $\\delta t$. Then give the maximum $\\delta t$ to assure an error less than 1%. "
    ]
   },
   {
