--- a/08-MolecularDynamics/MolecularDynamics-MacroBodies.ipynb
+++ b/08-MolecularDynamics/MolecularDynamics-MacroBodies.ipynb
@@ -300,6 +300,9 @@
    "id": "f7cfe5b2-93a4-44ee-a8d0-092f4f30b13f",
    "metadata": {
     "deletable": false,
+    "jupyter": {
+     "source_hidden": true
+    },
     "nbgrader": {
      "cell_type": "code",
      "checksum": "cfe724a0b7e262a83c245873330aaca9",
@@ -428,6 +431,9 @@
    "id": "42fe8b6e-dd51-49a1-b95b-a4e210742640",
    "metadata": {
     "deletable": false,
+    "jupyter": {
+     "source_hidden": true
+    },
     "nbgrader": {
      "cell_type": "code",
      "checksum": "317793b9beec35e2a02d1de57640b4aa",
@@ -556,6 +562,9 @@
    "id": "db83af21-e3ef-4c82-8fe6-d31e68503496",
    "metadata": {
     "deletable": false,
+    "jupyter": {
+     "source_hidden": true
+    },
     "nbgrader": {
      "cell_type": "code",
      "checksum": "188c8ef1b5c4bd9ad763d26b18cf8235",
