Updated parabolic heat materials

--- a/09-PDE-FiniteDifferences/PDE-Parabolic-Heat.ipynb
+++ b/09-PDE-FiniteDifferences/PDE-Parabolic-Heat.ipynb
@@ -73,7 +73,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0421c157-5d58-4e25-b4ac-2d910fb8a70e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Setup imports\n",
@@ -128,6 +130,7 @@
     "\n",
     "# Set the initial temperature along the rod.\n",
     "T0 = np.zeros(NX)\n",
+    "#T0 = np.random.uniform(-100.0, 1000.0, NX)\n",
     "T0[0] = 100.0\n",
     "T0[-1] = 50"
    ]
