Added update for random numbers

--- a/10-RandomSystems/RandomNumbers.ipynb
+++ b/10-RandomSystems/RandomNumbers.ipynb
@@ -289,7 +289,7 @@
    "metadata": {},
    "source": [
     "<mark>Exercises</mark>\n",
-    "- [ ] Can you estimate the are from the previous computation (method 1)\n",
+    "- [ ] Can you estimate the area from the previous computation (method 1)\n",
     "- [ ] Generate a random sample in the triangular region delimited by the x and y axis and the straight line $y = 1-x$.\n",
     "- [ ] Generate a random uniform sample in the diamond figure with vertexes at $(1, 0), (0, 1), (-1, 0), (0, -1)$.\n",
     "- [ ] Generate a random uniform sample in a sphere, $x^2 + y^2 + z^2 = R^2$. Count the fraction of numbers that are in the first octant. "
@@ -313,7 +313,7 @@
     "\\begin{equation}\n",
     "\\frac{1}{b-a}\\int_a^b f(x) dx \\simeq \\frac{1}{n} \\sum_{i=1}^n f(x_i),\n",
     "\\end{equation}\n",
-    "or , in higuer dimensions\n",
+    "or , in higher dimensions\n",
     "\\begin{equation}\n",
     "\\frac{1}{8}\\int_1^3\\int_{-1}^1 \\int_0^2 f(x, y, z) dxdydz \\simeq \\frac{1}{n} \\sum_{i=1}^n f(x_i, y_i, z_i).\n",
     "\\end{equation}\n",
@@ -419,11 +419,12 @@
    "metadata": {},
    "source": [
     "<mark>Exercises</mark>\n",
-    "- [ ] Compute \n",
+    "- [ ] (Ward) Compute \n",
     "  \\begin{equation}\n",
     "  \\int_0^2\\int_3^6\\int_{-1}^1 (y x^2 + z\\log y + e^x) dx dy dz\n",
     "  \\end{equation}\n",
-    "- [ ] Compute the area under the curve $y = e^{-(x+1)^2}$\n"
+    "- [ ] Compute the area under the curve $y = e^{-(x+1)^2}$\n",
+    "- (Boudreau, 7.8.7) Estimate the volume of an hypersphere in 10 dimensions. The convergence rate is equal to $C/\\sqrt M$, where $M$ is the total number of samples. Estimate the value of $C$. Is it the same for 20 dimensions?\n"
    ]
   },
   {
@@ -485,13 +486,17 @@
    "source": [
     "<mark>Exercise</mark>\n",
     "- [ ] Compute the mean squared distance as a function of time\n",
-    "- [ ] Simulate a 3D random walk"
+    "- [ ] Simulate a 3D random walk\n",
+    "- [ ] Simulate a loaded dice with the following probabilities. Perform 10000 throws and plot the final distribution.\n",
+    "| Outcome      | 1 | 2| 3| 4| 5| 6|\n",
+    "|-|-|-|-|-|-|-|\n",
+    "| Probability  | 0.2 | 0.14 | 0.22 | 0.16 | 0.17 | 0.11|"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "922ea162-8d05-4afc-8202-7efc312de142",
+   "id": "fc504527-1772-407c-9ff3-9e3e1a72ef00",
    "metadata": {},
    "outputs": [],
    "source": []
