Added latest changes for random numbers

--- a/10-RandomSystems/RandomNumbers.ipynb
+++ b/10-RandomSystems/RandomNumbers.ipynb
@@ -300,7 +300,7 @@
    "id": "450d2c3c-703d-43e5-805a-40812ddb15a1",
    "metadata": {},
    "source": [
-    "# Computing random integrals (areas and volumes)\n",
+    "# Computing random integrals \n",
     "REF: Ward\n",
     "\n",
     "Computing integrals using random numbers is easy and practical, specially for large dimensions. In the unit interval, one can compute\n",
@@ -328,7 +328,7 @@
    "id": "575131ab-a304-4c79-8af2-bacf2f05cdb9",
    "metadata": {},
    "source": [
-    "## Example: Area\n",
+    "## Example\n",
     "Compute the following integral\n",
     "\\begin{equation}\n",
     "\\iint_\\limits{\\Omega}\\sin\\sqrt{\\ln(x+y+1)} dx dy, \n",
@@ -425,6 +425,30 @@
     "  \\end{equation}\n",
     "- [ ] Compute the area under the curve $y = e^{-(x+1)^2}$\n",
     "- (Boudreau, 7.8.7) Estimate the volume of an hypersphere in 10 dimensions. The convergence rate is equal to $C/\\sqrt M$, where $M$ is the total number of samples. Estimate the value of $C$. Is it the same for 20 dimensions?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "812d96a0-a171-4c75-8b9c-5131b281cd08",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "0ced82fdba85ba02e235746a8ba672dc",
+     "grade": false,
+     "grade_id": "cell-6cf1d5a68776924f",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
