Added some more exercises

--- a/10-RandomSystems/MonteCarlo-Simulation.ipynb
+++ b/10-RandomSystems/MonteCarlo-Simulation.ipynb
@@ -33,6 +33,15 @@
     "- Anagnostoupulos, A practical introduction to computational physics and scientific computing\n",
     "- Ward, Numerical Mathematicas and Computing\n",
     "\n",
+    "TO CHECK:\n",
+    "- https://www.algorithm-archive.org/contents/metropolis/metropolis.html\n",
+    "- http://www.cmap.polytechnique.fr/~gobet/DemoPython/MetropolisHastings_GaussianSampling.html\n",
+    "- https://tmramalho.github.io/blog/2014/02/24/an-introduction-to-the-metropolis-method-with-python/\n",
+    "- https://stackoverflow.com/questions/55525076/implementing-the-metropolis-hasting-algorithm\n",
+    "- https://twiecki.io/blog/2015/11/10/mcmc-sampling/\n",
+    "\n",
+    "\n",
+    "\n",
     "# Markov-chain Monte Carlo simulations\n",
     "The [Monte Carlo simulation method](https://en.wikipedia.org/wiki/Monte_Carlo_method) uses random sampling to perform computational experiments. One , very famous example, is the [Ising model (1920)](https://en.wikipedia.org/wiki/Ising_model), used to model magnetic materials (among many other applications). Here, each site on a discrete grid has a magnetic moment (or any other quantity) whose orientation (up/down, left/right, or angle) represents that site state, and there is an interaction with close neighbors (In 1D, neighbors left and right, in 2D, left/right/up/down). The interaction model can represent how the system respond to temperature and external magnetic field, or to external information pressure (for social systems) and so on. Here we will focus on the thermal 2D model that presents a phase transition. First, we will need to define some key concepts. The Ising model represents a system in the canonical ensemble (fixed temperature, number of particles and volume), where the samples are distributed according to a very specific distribution which you need to sample efficiently. To do so, you use a Markov-Chain and the Metropolis-Hastings algorithm.  The random process allows to simulate the intrinsic fluctuations when a system is in contact with a heat bath. "
    ]
@@ -64,13 +73,13 @@
     "If the actual probability to find the system in state $\\mu$  depends on time and is given by $w_\\mu(t)$, its time evolution is given by the *master equation*\n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{dw_\\mu(t)}{dt} = \\sum_\\nu {w_\\nu(t) R(\\nu\\to\\mu) - w_\\mu R(\\mu\\to\\nu)},\n",
+    "\\frac{dw_\\mu(t)}{dt} = \\sum_\\nu {w_\\nu(t) R(\\nu\\to\\mu) - w_\\mu(t) R(\\mu\\to\\nu)},\n",
     "\\end{equation}\n",
     "\n",
     "where $R(\\mu\\to\\nu)$ is the transition probability, and $\\sum_\\mu w_\\mu(t)= 1$. After a long time the system reaches a steady state  and $w_\\mu(t)$ converge to finite numbers $p_\\mu \\le 0$. In that case one has \n",
     "\n",
     "\\begin{equation}\n",
-    "0 = \\sum_\\nu {w_\\nu(t) R(\\nu\\to\\mu) - w_\\mu R(\\mu\\to\\nu)},\n",
+    "0 = \\sum_\\nu {w_\\nu(t) R(\\nu\\to\\mu) - w_\\mu(t) R(\\mu\\to\\nu)},\n",
     "\\end{equation}\n",
     "\n",
     "and the detailed balance condition is a sufficient (but not necessary) condition to fulfill this.\n",
@@ -141,7 +150,31 @@
     "  \\begin{equation}\n",
     "  p(v) dv = \\left( \\frac{m}{2\\pi \\tau} \\right)^{3/2} 4\\pi v^2 e^{-mv^2/2\\tau} dv,\n",
     "  \\end{equation}\n",
-    "  Non-dimensionalize this equation to show that this (Boltzmann) distribution can be sampled from the gamma distribution. Do it using scipy. Repeat this generation but using Markov chain Monte Carlo.  "
+    "  where $\\tau = k T$, $m$ is the molecule mass, and $k_B$ is the Boltzmann constant. Non-dimensionalize this equation to show that this (Boltzmann) distribution can be sampled from the gamma distribution. Do it using scipy. Repeat this generation but using Markov chain Monte Carlo.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63046e98-ea61-482d-98f4-1a1abcd1aa13",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "2cdef6b25f40c89e89151481cc0b5585",
+     "grade": false,
+     "grade_id": "cell-d6c5f911f3edaaa1",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
    ]
   },
   {
@@ -172,7 +205,7 @@
     "For the mean energy, one has\n",
     "\n",
     "\\begin{equation}\n",
-    "\\langle E \\rangle = \\sum_\\mu p_\\mu O_\\mu = \\sum_\\mu \\frac{1}{Z} e^{-\\beta E_\\mu} = -\\frac{\\partial \\ln Z}{\\partial \\beta}\n",
+    "\\langle E \\rangle = \\sum_\\mu p_\\mu E_\\mu = \\sum_\\mu \\frac{1}{Z} e^{-\\beta E_\\mu} = -\\frac{\\partial \\ln Z}{\\partial \\beta}\n",
     "\\end{equation}\n",
     "\n",
     "The specific heat can be computed as \n",
@@ -220,7 +253,7 @@
     "We would like to simulate the Ising system to reproduce an interesting phenomena: a phase transition. For $B=0$, the system will be magnetized (or not) and the behaviour will be clearly determined for a critical temperature \n",
     "\n",
     "\\begin{equation}\n",
-    "\\beta_c = \\frac{1}{2}\\ln(1+\\sqrt{2}) \\simeq = 0.4406867935\\ldots\n",
+    "\\beta_c = \\frac{1}{2}\\ln(1+\\sqrt{2}) \\simeq  0.4406867935\\ldots\n",
     "\\end{equation}\n",
     "\n",
     "<!-- <img src=\"https://farside.ph.utexas.edu/teaching/329/lectures/img1313.png\">\n",
@@ -457,30 +490,261 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572e232b-0894-4af4-935e-cbbe3cd321da",
+   "id": "1d4b5d14-eb03-49e4-8a23-22cda54f2fb2",
    "metadata": {},
    "source": [
     "<mark> Exercises</mark>\n",
-    "- [ ] Plot the observable for several system sizes. Is there any dependence?\n",
-    "- [ ] Plot the energy, magnetization, etc, as functions of time, for several temperatures, including the critical one. What do you observe? \n",
-    "- [ ] What is the effect of taking more samples? do the results improve?\n",
-    "- [ ] Create an animation of the evolution of the system.\n",
-    "- [ ] There should be a correlation between samples. How will you compute it? or taking samples after a full sweep guarantees something?\n",
-    "- [ ] Compute the same observable but average over several seeds to compute the mean and the error of the mean\n",
-    "- [ ] The statistic over several seeds can be computed in parallel using the multiprocessing module (for example). Implement it. \n",
-    "- [ ] How does the computation time scales with $n$, for a full simulation?\n",
-    "- [ ] Is there a relationship between the number of samples and the system size?\n",
-    "- [ ] Use vpython to visualize the system and its evolution\n",
-    "- [ ] Investigate the Wang-Landau sampling. Implement it. (FINAL PROJECT) "
+    "- [ ] Plot the observable for several system sizes. Is there any dependence?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9106f16-12e5-4087-b0a1-a2000320d09e",
+   "id": "fd5a76c5-61e8-4582-b47c-35572378fbd7",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "b9ee9ec3b8a27942c5ddf8821eac80b8",
+     "grade": false,
+     "grade_id": "cell-95419a793dc9d479",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bea69b66-464b-4d9d-b7a3-8750c86a5d0a",
+   "metadata": {},
+   "source": [
+    "- [ ] Plot the energy, magnetization, etc, as functions of time, for several temperatures, including the critical one. What do you observe? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a3e5469-f92c-4b54-877c-be1d76f5a308",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "a23eb93c1c453df289112dff0d4bd344",
+     "grade": false,
+     "grade_id": "cell-82b7a067478da2ce",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70381d3c-904e-4fc4-b6a7-06fb2fcb1900",
+   "metadata": {},
+   "source": [
+    "- [ ] Plot the magnetization and energy versus iteration for several seeds. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91019a04-d01e-4dfd-9d50-234412f1c4fc",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "e73365330ca7ae9279fd82362e3f0eed",
+     "grade": false,
+     "grade_id": "cell-8d4b3e8c7fdb3410",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# PLOT HERE THE ENERGY AND MAGNETIZATION AS FUNCTIONS OF TIME FOR SEVERAL SEEDS\n",
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0260e2df-f1c6-426e-aad6-61dde7c38c9d",
+   "metadata": {},
+   "source": [
+    "- [ ] Compute the same observable but average over several seeds to compute the mean and the error of the mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc6d6196-5ccd-4336-92e9-c466ebe4fff6",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "cb5d6aa0fe36482b08513e8433a490d5",
+     "grade": false,
+     "grade_id": "cell-aec42331a7d24053",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "430f93c0-4500-407f-8aeb-e0522be85e5b",
+   "metadata": {
+    "deletable": false,
+    "nbgrader": {
+     "cell_type": "code",
+     "checksum": "2429075d6abf658711a1d571bd46090c",
+     "grade": false,
+     "grade_id": "cell-43230f864b76d22b",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00adf524-bbd0-4d0d-9d81-2b7deed8fdb5",
+   "metadata": {},
+   "source": [
+    "- [ ] Create an animation of the evolution of the system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ed02a95-0656-4499-b3d2-ab2ddb14c937",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f99ef4b-0188-40d6-bbdb-d0eb5f4a9272",
+   "metadata": {},
+   "source": [
+    "- [ ] There should be a correlation between samples. How will you compute it? or taking samples after a full sweep guarantees something?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c3d87a-eb5f-4cda-9e9c-0d0ab190436c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25e346f8-d7f3-4f3a-a17c-acca8ab52305",
+   "metadata": {},
+   "source": [
+    "- [ ] The statistic over several seeds can be computed in parallel using the multiprocessing module (for example). Implement it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16043be0-7a4e-46d2-a537-d81d54b7ab22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5cb17bb-00b2-49cd-aca9-cfe7b4d4f065",
+   "metadata": {},
+   "source": [
+    "- [ ] How does the computation time scales with $n$, for a full simulation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1adccc6-dc7f-4781-a397-c78fc03e586c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff70dab2-4c13-4358-95d1-62e944b3687f",
+   "metadata": {},
+   "source": [
+    "- [ ] Is there a relationship between the number of samples and the system size?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b79400ea-5819-4292-9d84-75cfe50f1e37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd38fec4-741f-41e9-b09a-c8735cfffc6c",
+   "metadata": {},
+   "source": [
+    "- [ ] Use vpython to visualize the system and its evolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b254868-a63b-47f4-88d0-7fba033225b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51bb8015-ed9b-4197-a815-e8bb90a44c37",
+   "metadata": {},
+   "source": [
+    "- [ ] Investigate the Wang-Landau sampling. Implement it. (FINAL PROJECT) "
+   ]
   }
  ],
  "metadata": {
